--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     font-family: 'Press Start 2P', monospace;
     margin: 0;
     padding: 0;
+    background: #c9c9c9;
 
 }
 
@@ -16,15 +17,18 @@ body {
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    height: 40vh;
+    height: 100vh;
     border: 5px solid blue;
     padding: 10px;
 }
 
 #chat {
-    width: 50%;
-    height: 40vh;
+   width: 50%;
+    height: 400px; 
     border: 5px solid rgb(255, 0, 0);
+    border-radius: 30px;
+    overflow-y: auto; 
+    padding: 10px;
 }
 
 .input-area {
