--- a/style.css
+++ b/style.css
@@ -18,26 +18,42 @@ body {
     gap: 10px;
     width: 100%;
     height: 100vh;
-    border: 5px solid blue;
+    
     padding: 10px;
 }
 
 #chat {
-   width: 50%;
-    height: 400px; 
-    border: 5px solid rgb(255, 0, 0);
+    background: #d8d8d8;
+    width: 100%;
+    height: 400px;
+   
+
     border-radius: 30px;
-    overflow-y: auto; 
+    overflow-y: auto;
     padding: 10px;
 }
 
 .input-area {
     width: 30%;
     height: 30vh;
-    border: 5px solid green;
+    background: #d8d8d8;
     display: flex;
     justify-content: center;
     align-items: center;
-      flex-direction: column;
-       gap: 10px;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    
+}
+
+#messageInput {
+    width: 100%;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#sendBtn {
+    border: none;
+    cursor: pointer;
+    padding: 5px;
 }
