--- a/style.css
+++ b/style.css
@@ -26,8 +26,6 @@ body {
     background: #d8d8d8;
     width: 100%;
     height: 400px;
-   
-
     border-radius: 30px;
     overflow-y: auto;
     padding: 10px;
@@ -56,4 +54,5 @@ body {
     border: none;
     cursor: pointer;
     padding: 5px;
+    font-weight: bold;
 }
